--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
- 
+ *{
+  margin: 0;
+  padding: 0;
+ }
+
+ .asosiy {
+  width: 1200px;
+  margin: 0 auto;
+  border: 2px solid black;
+  background-color: rgb(206, 202, 202);
+ }
