--- a/src/Bosh/bosh.css
+++ b/src/Bosh/bosh.css
@@ -6,4 +6,9 @@
 .blok1{
     width: 1,640px ;
     height: 710.85px;
+    margin-top: 163.56px;
+    margin-left: 140px;
+    border-radius: 50px;
+    opacity: 50%;
+    background-color: #6C60FE;
 }
